# simulating-agents

./: .env.template  .gitignore  README.md  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
d3rlpy_logs/DQN_20250722170152/: loss.csv  model_10000.d3  q_funcs.0._encoder._layers.0.bias_grad.csv  q_funcs.0._encoder._layers.0.weight_grad.csv  q_funcs.0._encoder._layers.2.bias_grad.csv  q_funcs.0._encoder._layers.2.weight_grad.csv  q_funcs.0._fc.bias_grad.csv  q_funcs.0._fc.weight_grad.csv  td_error.csv  time_algorithm_update.csv  time_sample_batch.csv  time_step.csv
d3rlpy_logs/DQN_20250723143013/: loss.csv  model_10000.d3  params.json  q_funcs.0._encoder._layers.0.bias_grad.csv  q_funcs.0._encoder._layers.0.weight_grad.csv  q_funcs.0._encoder._layers.2.bias_grad.csv  q_funcs.0._encoder._layers.2.weight_grad.csv  q_funcs.0._fc.bias_grad.csv  q_funcs.0._fc.weight_grad.csv  td_error.csv  time_algorithm_update.csv  time_sample_batch.csv  time_step.csv
d3rlpy_logs/DiscreteCQL_20250723150746/: conservative_loss.csv  loss.csv  q_funcs.0._encoder._layers.0.bias_grad.csv  q_funcs.0._encoder._layers.0.weight_grad.csv  q_funcs.0._encoder._layers.2.bias_grad.csv  q_funcs.0._encoder._layers.2.weight_grad.csv  q_funcs.0._fc.bias_grad.csv  q_funcs.0._fc.weight_grad.csv  td_error.csv  td_loss.csv  time_algorithm_update.csv  time_sample_batch.csv  time_step.csv
src/: cal_demog_accuracy.py  eda.py  sim_agents.py  test.py  variables.py
(+1368 files in other folders)
