[project]
name = "simulating-agents"
version = "0.1.0"
description = "Implement an agent that simulates customer's behaviors"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.8",
    "d3rlpy>=2.8.1",
    "numpy>=2.2.6",
    "openai>=1.84.0",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.14.3",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "surprise>=0.1",
    "torch>=2.7.1",
]
